# dictation

./: .gitignore  README.md  format.sh  pyproject.toml  run.sh  test.sh  test_text_processor.py
.claude/: settings.local.json
dictation/: __init__.py  __main__.py  cli.py  config.py
dictation/core/: transcriber.py
dictation/platform/: detection.py
dictation/platform/keyboard/: evdev_listener.py  pynput_listener.py
dictation/ui/: cli_ui.py
tests/: README.md  conftest.py
tests/integration/: test_dictation_app.py
tests/unit/: test_config.py
tests/unit/core/: test_recorder.py  test_text_processor.py  test_transcriber.py
tests/unit/platform/: test_detection.py
tests/unit/platform/keyboard/: test_evdev_listener.py  test_pynput_listener.py
tests/unit/platform/text_injection/: test_pynput_injector.py  test_ydotool_injector.py
whisper_dictation/: __init__.py  __main__.py  cli.py  config.py
whisper_dictation/core/: recorder.py  text_processor.py  transcriber.py
whisper_dictation/platform/keyboard/: base.py  evdev_listener.py  pynput_listener.py
whisper_dictation/platform/text_injection/: base.py  pynput_injector.py  ydotool_injector.py
whisper_dictation/ui/: base.py  cli_ui.py  macos_menubar.py
